# tamarin-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TESTING.md  clippy.toml  prove_and_reverify.sh  setup.sh
.github/workflows/: ci.yml
crates/tamarin-accountability/: Cargo.toml
crates/tamarin-accountability/src/: formula.rs  generation.rs  lib.rs
crates/tamarin-export/: Cargo.toml
crates/tamarin-export/src/: lib.rs  proverif_header.rs
crates/tamarin-parser/: Cargo.toml
crates/tamarin-prover/: Cargo.toml  build.rs
crates/tamarin-prover/src/: cli.rs  lib.rs  main.rs  run.rs
crates/tamarin-prover/tests/: cli_e2e.rs
crates/tamarin-prover/tests/fixtures/: single_recv.spthy
crates/tamarin-sapic/: Cargo.toml
crates/tamarin-sapic/src/: annotation.rs  apply.rs  base_translation.rs  bindings.rs  compression.rs  convert.rs  facts.rs  inline.rs  let_destructors.rs  lib.rs  locks.rs  progress_function.rs  progress_translation.rs  reliable_channel.rs  report.rs  secret_channels.rs  states.rs  translate.rs  typing.rs  warnings.rs
crates/tamarin-server/: Cargo.toml
crates/tamarin-server/examples/: run_server.rs
crates/tamarin-server/src/: lib.rs  routes.rs  state.rs  theory_io.rs
crates/tamarin-server/src/graph/: abbreviation.rs  mod.rs  options.rs  render_system.rs  repr.rs  simplify.rs
crates/tamarin-server/src/graph_clean/: abbrev.rs  dot.rs  mod.rs  model.rs  term.rs
crates/tamarin-server/src/handlers/: dot.rs  json_resp.rs  mod.rs  path_parse.rs  proof_tree.rs  root.rs  static_files.rs  theory.rs  theory_html.rs
crates/tamarin-server/src/web_clean/: envelope.rs  errors.rs  escape.rs  forms.rs  intdot.rs  mod.rs  notfound_template.rs  page.rs  proofscript.rs  route.rs  shell_template.rs  text.rs
crates/tamarin-server/tests/: capture_haskell_fixtures.sh  routes_autoprove.rs  routes_basic.rs  routes_graph.rs  routes_proof_step.rs  routes_static.rs  routes_stubs.rs  routes_upload.rs
crates/tamarin-server/tests/common/: mod.rs
crates/tamarin-server/tests/fixtures/: oracle_missing.spthy
crates/tamarin-server/tests/fixtures/haskell-responses/: autoprove.json  autoprove_all.json  autoprove_on_proven.json  autoprove_on_rules.json  del_path.json  del_path_bad.json  download.txt  equiv_overview.json  graph.html  index.html  intdot.html  interactive_graph_def.html  kill.txt  kill_path.txt  main_help.json  main_lemma.json  main_message.json  main_rules.json  missing_idx_overview.html  next_help.txt  overview_help.html  prev.txt  reload.json  verify.json  verify_proof.json
crates/tamarin-term/: Cargo.toml
crates/tamarin-term/src/: builtin.rs  function_symbols.rs  intern.rs  lib.rs  lterm.rs  macro_expand.rs  maude_parse.rs  maude_print.rs  maude_proc.rs  maude_sig.rs  maude_types.rs  norm.rs  positions.rs  pretty.rs  rewriting.rs  subst.rs  subst_vfresh.rs  subsumption.rs  subterm_rule.rs  term.rs  unification.rs  vterm.rs
crates/tamarin-theory/: Cargo.toml
crates/tamarin-theory/examples/: dump_proof.rs  dump_variants.rs  elaborate_all.rs
crates/tamarin-theory/examples/common/: mod.rs
crates/tamarin-theory/src/: atom.rs  auto_sources.rs  check_terms.rs  deriv_check.rs  elaborate.rs  fact.rs  formula.rs  guarded.rs  guarded_types.rs  intruder_rules.rs  intruder_variants.rs  lib.rs  macro_expand.rs  predicate.rs  predicate_expand.rs  pretty_formula.rs  pretty_hpj.rs  pretty_sapic.rs  pretty_system.rs  pretty_theory.rs  proof_skeleton.rs  prove.rs  replay.rs  restriction.rs  rule.rs  rule_restriction.rs  sapic.rs  signature.rs  state_trace.rs  tactic.rs  theory.rs
crates/tamarin-theory/src/constraint/: constraints.rs  mod.rs  system.rs
crates/tamarin-theory/src/constraint/solver/: annotated_goals.rs  context.rs  contradictions.rs  goals.rs  mod.rs  proof_method.rs  reduction.rs  rename_precise.rs  search.rs  simplify.rs  sources.rs  tactic_show.rs  trace.rs
crates/tamarin-theory/src/tools/: abstract_interpretation.rs  equation_store.rs  injective_fact_instances.rs  mod.rs  rule_variants.rs  subterm_store.rs
crates/tamarin-theory/tests/: oracle_solver.rs
crates/tamarin-theory/tests/fixtures/: auth_pattern.spthy  disj_lemma.spthy  eval_atoms.spthy  falsifiable.spthy  falsified_chain.spthy  falsified_unique_action.spthy  fresh_ordering.spthy  let_block.spthy  multi_arity.spthy  multi_rule.spthy  multiple_lemmas.spthy  needs_constructor.spthy  needs_constructor_simple.spthy  persistent_fact.spthy  pub_var.spthy  restriction_unique.spthy  reuse_lemma.spthy  safety_two_keys.spthy  safety_unique.spthy  sendrecv_chain.spthy  sig_minimal.spthy  sources_lemma.spthy  three_facts.spthy  three_rule.spthy  tiny_setup.spthy  two_actions.spthy  two_keys.spthy  two_rules.spthy  use_induction.spthy  with_restriction.spthy
crates/tamarin-utils/: Cargo.toml
crates/tamarin-utils/src/: bind.rs  color.rs  cow.rs  dag.rs  dot.rs  env_gate.rs  env_tracer.rs  fresh.rs  lib.rs  logic.rs  misc.rs  prelude_ext.rs  pretty.rs  pretty_html.rs  timing.rs  unicode.rs
patches/: tamarin-prover-fixes.patch
scripts/: README.md  bench.sh  bump_submodule.sh  canon_proof_tree.py  canonicalize_trace.py  compare_parity_tsv.py  corpus_diff_proof_trees.sh  corpus_file_diff.sh  corpus_full_trace_diff.sh  corpus_raw_diff.sh  diff_aes_calls.sh  diff_maude_io.sh  diff_proof_raw.sh  diff_proof_tree.sh  diff_trace.py  extend_anchor_citations.py  file_flags.tsv  gen_license_headers.py  header_identities.json  pane_byte_check.sh  parity_check.sh  parity_corpus.txt  pretty_gate.sh  rs_vs_rs_diff.sh  triage_diff_vs_hs.sh  web_crawl.py  web_diff.py  web_normalize.py  web_parity.sh  websweep_residual.txt  wf_gate.sh
tests/wellformedness_fixtures/: README.md  diff_left_right_mismatch.spthy  diff_reserved_prefix.spthy  diff_right_rule_mismatch.spthy  exists_trace_reuse.spthy  expected.txt  fact_arity_mismatch.spthy  fact_multiplicity_mismatch.spthy  formula_unguarded.spthy  fr_with_pub_var.spthy  fresh_public_constant.spthy  lhs_not_used.spthy  multiplication_in_rule_lhs.spthy  nat_wrong_sort.spthy  non_subterm_equation.spthy  public_constant_capitalization.spthy  sort_mismatch.spthy  (+6 more)
(+19 files in other folders)
