[package]
name = "tamarin-sapic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SAPIC process calculus for the Tamarin prover (Rust port)."

[dependencies]
tamarin-utils = { workspace = true }
tamarin-term = { workspace = true }
tamarin-parser = { workspace = true }
tamarin-theory = { workspace = true }

[lints]
workspace = true
