[package]
name = "tamarin-term"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Term language for the Tamarin prover (Rust port)."

[dependencies]
tamarin-utils = { workspace = true }
rustc-hash = { workspace = true }

[lints]
workspace = true
