[package]
name = "tamarin-theory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Theory representation for the Tamarin prover (Rust port)."

[dependencies]
tamarin-utils = { workspace = true }
tamarin-term = { workspace = true }
tamarin-parser = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
hashbrown = "0.17"
indexmap = { workspace = true }
fancy-regex = "0.18"

[dev-dependencies]
walkdir = "2"
mimalloc = { version = "0.1", default-features = false }

[lints]
workspace = true
