[package]
name = "tamarin-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Utility library for the Tamarin prover (Rust port)."

[dependencies]
sha2 = { workspace = true }
base64 = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
